# datacomp-caption

./: README.md  benchmark.py  caption_dataset.py  compare-captions.py  datacomp-caption-fast.py  main.py  pyproject.toml  run-2xa100.sh  run-default.sh  run-multi-gpu.sh  test_captioning.py  test_coverage.py  test_multigpu.py
